force-app/main/default/objects/DD_Dependent__c/DD_Dependent__c.object-meta.xml
<CustomObject>
    <description>Dependent details under a member enrollment</description>
    <label>Dependent</label>
    <nameField><displayFormat>DEP-{000000}</displayFormat><label>Dependent ID</label><type>AutoNumber</type></nameField>
    <pluralLabel>Dependents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>