force-app/main/default/objects/DD_Dependent__c/fields/DOB__c.field-meta.xml
<CustomField>
    <fullName>DOB__c</fullName>
    <label>Date of Birth</label>
    <type>Date</type>
    <required>true</required>
    <description>For age-out calculation</description>
</CustomField>