force-app/main/default/objects/DD_Dependent__c/fields/Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Enrollment__c</fullName>
    <label>Enrollment</label>
    <type>MasterDetail</type>
    <referenceTo>DD_Enrollment__c</referenceTo><relationshipLabel>Dependents</relationshipLabel><relationshipName>Dependents</relationshipName><relationshipOrder>0</relationshipOrder><reparentableMasterDetail>false</reparentableMasterDetail><writeRequiresMasterRead>false</writeRequiresMasterRead>
    <description>Parent enrollment</description>
</CustomField>