force-app/main/default/objects/DD_Dependent__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <label>First Name</label>
    <type>Text</type>
    <length>100</length><required>true</required><unique>false</unique><externalId>false</externalId>
    <description>Dependent first name</description>
</CustomField>