force-app/main/default/objects/DD_Dependent__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <label>Last Name</label>
    <type>Text</type>
    <length>100</length><required>true</required><unique>false</unique><externalId>false</externalId>
    <description>Dependent last name</description>
</CustomField>