force-app/main/default/objects/DD_Dependent__c/fields/Relationship__c.field-meta.xml
<CustomField>
    <fullName>Relationship__c</fullName>
    <label>Relationship</label>
    <type>Picklist</type>
    <required>true</required><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Spouse</fullName><default>false</default><label>Spouse</label></value><value><fullName>Domestic Partner</fullName><default>false</default><label>Domestic Partner</label></value><value><fullName>Child</fullName><default>false</default><label>Child</label></value><value><fullName>Stepchild</fullName><default>false</default><label>Stepchild</label></value><value><fullName>Adopted Child</fullName><default>false</default><label>Adopted Child</label></value></valueSetDefinition></valueSet>
    <description>Relationship to subscriber</description>
</CustomField>